fix: card overlapping and navbar pesponsive issues

--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,12 @@
     padding: 0px;
 }
 
+button {
+    font-size: 12px;
+    background-color: #6655FF;
+    color: white;
+    border: none;
+    padding: 8px 5px;
+    border-radius: 5px;
+    cursor: pointer;
+}
