--- a/src/components/ProductItem/ProductItem.module.css
+++ b/src/components/ProductItem/ProductItem.module.css
@@ -1,5 +1,5 @@
-.product-card {
-    width: 300px;
+.productCard {
+    width: 100%;
     border: 1px solid #e0e0e0;
     padding: 10px;
     border-radius: 10px;
